// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card overview 0 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-zl19tc"
  >
    <img
      class="css-9taffg"
      src="https://picsum.photos/seed/picsum/128/128"
    />
    <span
      class="css-vurnku"
    >
      Maryjane Legros
    </span>
  </div>
</DocumentFragment>
`;

exports[`Card overview 1 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-isbktd"
  >
    <img
      class="css-9taffg"
      src="https://picsum.photos/seed/picsum/128/128"
    />
    <span
      class="css-vurnku"
    >
      Cydney Wilkinson
    </span>
  </div>
</DocumentFragment>
`;

exports[`Card overview 2 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1swq2cp"
  >
    <img
      class="css-9taffg"
      src="https://picsum.photos/seed/picsum/128/128"
    />
    <span
      class="css-vurnku"
    >
      Monte Kub
    </span>
  </div>
</DocumentFragment>
`;

exports[`Card overview 3 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-q0gjni"
  >
    <img
      class="css-9taffg"
      src="https://picsum.photos/seed/picsum/128/128"
    />
    <span
      class="css-vurnku"
    >
      Kraig Hirthe
    </span>
  </div>
</DocumentFragment>
`;

exports[`Card overview 4 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-btz6ll"
  >
    <img
      class="css-9taffg"
      src="https://picsum.photos/seed/picsum/128/128"
    />
    <span
      class="css-vurnku"
    >
      Brandy Schaefer
    </span>
  </div>
</DocumentFragment>
`;
